implementing async features and cacheable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=vision-ex-backend
-
 API_KEY=607f12df00958d79f56040409cdf59c6
+
+# Enable caching
+spring.cache.type=simple
+
+# Cache configuration
+spring.cache.cache-names=weatherSummary
+logging.level.org.springframework.web=INFO
